# web-browser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  browsertab.cpp  browsertab.h  browsertab.ui  controlpanel.cpp  controlpanel.h  controlpanel.ui  customwebenginepage.cpp  customwebenginepage.h  historyentrywidget.cpp  historyentrywidget.h  historyentrywidget.ui  historymanager.cpp  historymanager.h  historywidget.cpp  historywidget.h  historywidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tabwidget.cpp  tabwidget.h
resources/html/: newtab.html
